@@ -3,6 +3,9 @@
     * Add Net::SSLeay::ASN1_ENUMERATED#new method.
     * Add Net::SSLeay::ASN1_ENUMERATED#set_int64 method.
     * Add Net::SSLeay::ASN1_ENUMERATED#get_int64 method.
+    * Add Net::SSLeay::ASN1_INTEGER#new method.
+    * Add Net::SSLeay::ASN1_INTEGER#set_int64 method.
+    * Add Net::SSLeay::ASN1_INTEGER#get_int64 method.
     
   [Bug Fix]
     * Fix bugs that exception messages for SSL are not shown well.
